<resources>

    <string name="app_name">GTalk</string>
    <string name="CopyRight">桂林电子科技大学荣誉出品 版权所有@Andecy</string>
    <string name="StartBtn">开 启 沟 通</string>
    <string name="account_hint">请输入您的学号</string>
    <string name="pwd_hint">请输入您的密码！</string>
    <string name="login_rmb">记住密码</string>
    <string name="login_auto">自动登录</string>
    <string name="cpwd_hint">请再次输入您的密码！</string>
    <string name="code_hint">请输入您获得的验证码</string>
    <string name="email_hint">请输入您的邮箱</string>
    <string name="btn_login">登 陆</string>
    <string name="login_bug">找回密码</string>
    <string name="register">注册账号</string>
    <string name="btn_sendCode">发送验证码</string>
    <string name="btn_alterPwd">修改密码！</string>
    <string name="RegisterName">学号: </string>
    <string name="Level">等级: </string>
    <string name="RegisterCode">验证码: </string>
    <string name="RegisterPwd">新的密码: </string>
    <string name="RegistercPwd">确认密码: </string>
    <string name="RegisterEmail">邮箱: </string>
    <string name="RegAgree">同意最终用户协议</string>
    <string name="Verify">确认</string>
    <string name="Cancel">取消</string>
    <string name="Reglabel">新注册用户尊享88888桂币大礼包！</string>
    <string name="MyFriends">我的好友</string>
    <string name="slide_title_02">其他资料</string>
    <string name="slide_title_1">权限</string>
    <string name="slide_title_10">状态: </string>
    <string name="slide_title_11">消息提醒</string>
    <string name="slide_title_12">注销账号</string>
    <string name="slide_title_3">工具</string>
    <string name="slide_title_30">查找好友</string>
    <string name="Finding">请输入好友的学号</string>
    <string name="btn_AddFriend">添加好友</string>
    <string name="slide_title_31">退出</string>
    <string name="ImageView">test</string>
    <string name="Sign">个性签名: </string>
    <string name="Signature">请在此填写个性签名</string>
    <string name="SignHint">请在此处填写您的个性签名，字数最多只有24个哦</string>
    <string name="AlertType_1">声音</string>
    <string name="AlertType_2">震动</string>
    <string name="LineType_1">在线</string>
    <string name="LineType_2">离线</string>
    <string name="SendMsg">发送</string>
    <string name="PersonalData">个人资料</string>
    <string name="TestInfo">测试服务</string>

</resources>