<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/iv_welcome_logo"
        android:layout_width="200dip"
        android:layout_height="201dip"
        android:layout_above="@+id/iv_welcome_ver"
        android:paddingBottom="@dimen/title_padding"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/ImageView"
        android:scaleType="fitEnd"
        android:src="@drawable/glogo_light" />

    <ImageView
        android:id="@+id/iv_welcome_verno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/ImageView"
        android:paddingLeft="100dip"
        android:src="@drawable/ver_no" />
    <ImageView
        
        android:id="@+id/iv_welcome_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/ImageView"
        android:paddingLeft="180dip"
        android:src="@drawable/ver_test" />

    <TextView
        android:id="@+id/tv_welcome_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_welcome_ver"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/title_padding"
        android:text="@string/app_name"
        android:textColor="@color/School_Text"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_welcome_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/title_padding"
        android:text="@string/CopyRight" />

    <Button
        android:id="@+id/btn_welcome_ok"
        style="@style/BigButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcome_appname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dip"
        android:text="@string/StartBtn" />

</RelativeLayout>